--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qram",
-  "version": "0.0.1-0",
+  "version": "0.1.0",
   "description": "Cram arbitrarily large data into multiple qr-codes",
   "license": "BSD-3-Clause",
   "main": "index.js",
@@ -59,8 +59,7 @@
   },
   "homepage": "https://github.com/digitalbazaar/qram",
   "module": "main.js",
-  "browser": {
-  },
+  "browser": {},
   "engines": {
     "node": ">=8.6.0"
   }
