--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "test": "cd test && npm run test-node",
     "test-node": "cd test && npm run test-node",
     "test-karma": "cd test && karma start karma.conf.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prepublish": "npm run build",
+    "build": "webpack"
   },
   "files": [
+    "dist/*.js",
+    "dist/*.js.map",
     "Decoder.js",
     "Encoder.js",
     "Packet.js",
@@ -52,7 +56,8 @@
     "karma-webpack": "^3.0.5",
     "mocha": "^6.1.2",
     "mocha-lcov-reporter": "^1.3.0",
-    "webpack": "^4.29.6"
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.6"
   },
   "repository": {
     "type": "git",
