--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qram",
-  "version": "0.3.9-0",
+  "version": "0.3.9",
   "description": "Cram arbitrarily large data into multiple qr-codes",
   "license": "BSD-3-Clause",
   "main": "index.js",
